css/responsive.css
/*Responsive Breakpoints*/
@media screen and (max-width: 320px) { /* iPhone portrait */

}

@media screen and (max-width: 480px) { /* iPhone landscape */
  body {
    background-color: #FFFFFF;
  }
	.main-hover-box {
	  border: none;
	  box-shadow: none;
	  width: 100%;
	  margin: 0 auto;
	  z-index: 100;
	}	
  h1 {
    font-size: 1.5rem;
  }
  .box-content {
    padding: 0 2rem 1rem 2rem;
    min-height: 300px;
  }
  .cf-gradient {
    display: none;
  }
  .footer {
    background-color: #E5E5E5;
  }
  .footer-text {
    float: none;
    text-align: center;
    margin-right: 0;
  }
  .btn-start {
    width: 90%;
  }
  .content {
    height: calc(100vh - 90px);
  }
}

@media screen and (max-width: 768px) { /* iPad portrait */
  .table-outer {
    overflow-x:scroll;
  }
}

/* Medium Devices, Desktops */
@media only screen and (min-width : 992px) {
  .main-hover-box {
    width: 60%;
  }
}

/* Large Devices, Wide Screens */
@media only screen and (min-width : 1200px) {
  .main-hover-box {
    width: 60%;
  }
}

